--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,14 @@ a:focus {
     border-radius: 12px;
 }
 
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
+/*.navbar {*/
+/*    padding: 15px 10px;*/
+/*    background: #fff;*/
+/*    border: none;*/
+/*    border-radius: 0;*/
+/*    margin-bottom: 40px;*/
+/*    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);*/
+/*}*/
 
 .navbar-btn {
     box-shadow: none;
@@ -483,6 +483,25 @@ input[type=text1] {
     /*Could be more or less, depending on screen size */
     border-radius: 12px;
 }
+
+.navbarDep{
+    background: #ececec;
+    margin-bottom: 1%;
+    border-radius: 5px;
+    font-size: 18px;
+}
+
+#navbarNav ul li.active>a, a[aria-expanded="true"]{
+    color: #fff;
+    background: #06425b;
+}
+
+#navbarNav ul li a:hover {
+    color: #fff !important;
+    background: #1D7195;
+}
+
+
 
 .content-modal-table{
     background-color: #fefefe;
@@ -1603,6 +1622,15 @@ input[type=text]:disabled{
     width: 100%;
     margin-top: 1%;
     border-radius: 12px;
+}
+
+.tableScroll3{
+    position: relative;
+    height: 50vh;
+    overflow-y: auto;
+    display: block;
+    background-color: white;
+    width: 80%;
 }
 
 .tableModal{
