--- a/css/style.css
+++ b/css/style.css
@@ -897,7 +897,7 @@ img{
     padding: 2%;
 }
 
-.tablePatient,.tableVaccine {
+.tablePatient,.tableVaccine, .tablePatientQueue {
     width: 100%!important;
     background-color: white;
 }
@@ -989,10 +989,10 @@ img{
 
 .patientQCounter {
     background-color: white;
-    width: 18%;
-    height: auto;
-    margin-left: 2%;
+    width: 100%;
+    height: 100%;
     border-radius: 12px;
+    padding: 2%;
 }
 
 .patientQueueButtons p,
@@ -1008,12 +1008,10 @@ h6 {
     border-radius: 12px;
     font-size: 25px;
     text-align: left;
-    margin-left: 7%;
+    width: 100%;
 }
 
-.patientQueueButtons {
-    display: flex;
-}
+
 
 
 /* ---------------------------------------------------
