--- a/css/style.css
+++ b/css/style.css
@@ -897,7 +897,7 @@ img{
     padding: 2%;
 }
 
-.tablePatient,.tableVaccine, .tablePatientQueue {
+.tablePatient,.tableVaccine {
     width: 100%!important;
     background-color: white;
 }
@@ -989,15 +989,17 @@ img{
 
 .patientQCounter {
     background-color: white;
-    width: 18%;
-    height: auto;
-    margin-left: 2%;
+    width: 100%;
+    height: 100%;
     border-radius: 12px;
+    padding:2%;
+
 }
 
 .patientQueueButtons p,
 h6 {
     text-align: center;
+    color: #ffffff;
 }
 
 .patientQueueButtons h6 {
@@ -1011,8 +1013,21 @@ h6 {
     width: 100%;
 }
 
+#numberAvailable{
+    background: #68A0B8;
+}
 
+#numberSent{
+    background: #4F91AD;
+}
 
+#claimedStubs{
+    background: #3681A1;
+}
+
+#redirectStub{
+    background: #1D7195;
+}
 
 /* ---------------------------------------------------
                    VACCINATION PERSONNEL MODULE
